move ldaps and owner resources under the /tenants URL.
